<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlannedWorksActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/planned_works_description"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/planned_works_date"
            android:textColor="@color/textColor"
            />

        <TextView
            android:id="@+id/datePickedView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="80dp"
            android:paddingRight="80dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@drawable/textview_border"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/planned_works_select_date_view" />

        <Button
            android:id="@+id/displayPlannedWorks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:text="@string/planned_works_button" />

        <LinearLayout
            android:id="@+id/plannedWorksLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">

        </LinearLayout>

    </LinearLayout>


</ScrollView>